# star-collector

./: .env.sample  .gitignore  .vars.sample  LICENSE  Makefile  README.md  Readme.md  config.sample.yaml  config.yaml  extract_titles.py  favs-bookmarks-2024-10-19.rss  mastodon_config.json.example  mastodon_config.php.sample  mastodon_config.yaml  pyproject.toml  rss.php  rss.py  sc_config.yaml  validate_feed.py
.github/workflows/: test.yaml  upload.yaml
docs/diagrams/: star-collector-c4-explorer.html  star-collector-component.puml  star-collector-container.puml  star-collector-context.puml  star-collector-deployment.puml
tests/: test.xml  test_extract_titles.py  test_rss.py
