[project]
name = "mastodon-rss"
version = "0.1.0"
description = "My Favs and Bookarks"
authors = [
    {name = "Stephan Heuel", email = "mail@ping13.net"}
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "feedgen>=1.0.0",
    "python-dotenv>=1.0.1",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
  "aider-chat"
]

[tool.uv.sources]
aider-chat = { git = "https://github.com/paul-gauthier/aider.git", branch = "main" }

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"
requests = "^2.31.0"
feedgen = "^0.9.0"
pyyaml = "^6.0.1"
