[project]
name = "mastodon-rss"
version = "0.1.0"
description = "My Favs and Bookmarks"
authors = [
    {name = "Stephan Heuel", email = "mail@ping13.net"}
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "click>=8.1.7",
    "feedgen>=1.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
  "aider-chat",
  "feedparser>=6.0.11",
]

[tool.uv.sources]
aider-chat = { git = "https://github.com/paul-gauthier/aider.git", branch = "main" }

